// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders logged in correctly 1`] = `
<div
  className="container-fluid"
>
  <div
    className="navigation-container row"
  >
    <div
      className="col"
    >
      <nav
        className="navbar navbar-expand-lg navbar-light"
      >
        <span
          className="pt-0 navbar-brand"
        >
          <img
            alt="logo"
            className="image--logo"
            src="/media/logo.svg"
          />
        </span>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          className="navbar-toggler"
          onClick={[Function]}
          type="button"
        >
          <span
            className="navbar-toggler-icon"
          />
        </button>
        <div
          aria-expanded={null}
          className="navbar-collapse collapse"
        >
          <div
            className="navbar-nav"
            onKeyDown={[Function]}
          >
            <a
              aria-current="page"
              className="nav--link-custom px-3 nav-link active"
              data-rb-event-key={null}
              disabled={false}
              href="/"
              onClick={[Function]}
              role="tab"
              style={Object {}}
              tabIndex={-1}
            >
              Home
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/recipes"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Recipes
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/calculator"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Calculator
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/flavors"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Flavors
            </a>
            <div
              className="dropdown nav-item"
              onKeyDown={[Function]}
            >
              <a
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle nav-link"
                data-rb-event-key={null}
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex={-1}
              >
                User
              </a>
              <div
                className="dropdown-menu"
              >
                <a
                  aria-current={null}
                  className="nav--link-custom dropdown-item"
                  disabled={false}
                  href="/user/profile"
                  onClick={[Function]}
                >
                  Profile
                  <br />
                </a>
                <a
                  aria-current={null}
                  className="nav--link-custom dropdown-item"
                  disabled={false}
                  href="/user/recipes"
                  onClick={[Function]}
                >
                  Recipes
                  <br />
                </a>
                <a
                  aria-current={null}
                  className="nav--link-custom dropdown-item"
                  disabled={false}
                  href="/user/favorites"
                  onClick={[Function]}
                >
                  Favorites
                  <br />
                </a>
                <a
                  aria-current={null}
                  className="nav--link-custom dropdown-item"
                  disabled={false}
                  href="/user/flavor-stash"
                  onClick={[Function]}
                >
                  Flavor Stash
                  <br />
                </a>
                <a
                  aria-current={null}
                  className="nav--link-custom dropdown-item"
                  disabled={false}
                  href="/user/shopping-list"
                  onClick={[Function]}
                >
                  Shopping List
                  <br />
                </a>
                <a
                  aria-current={null}
                  className="nav--link-custom dropdown-item"
                  disabled={false}
                  href="/user/settings"
                  onClick={[Function]}
                >
                  Settings
                  <br />
                </a>
                <a
                  aria-current={null}
                  className="nav--link-custom dropdown-item"
                  disabled={false}
                  href="/dashboard"
                  onClick={[Function]}
                >
                  Dashboard
                  <br />
                </a>
                <a
                  aria-current="page"
                  className="nav--link-custom dropdown-item active"
                  disabled={false}
                  href="/"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Logout
                  <br />
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`<Header /> renders logged out correctly 1`] = `
<div
  className="container-fluid"
>
  <div
    className="navigation-container row"
  >
    <div
      className="col"
    >
      <nav
        className="navbar navbar-expand-lg navbar-light"
      >
        <span
          className="pt-0 navbar-brand"
        >
          <img
            alt="logo"
            className="image--logo"
            src="/media/logo.svg"
          />
        </span>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          className="navbar-toggler"
          onClick={[Function]}
          type="button"
        >
          <span
            className="navbar-toggler-icon"
          />
        </button>
        <div
          aria-expanded={null}
          className="navbar-collapse collapse"
        >
          <div
            className="navbar-nav"
            onKeyDown={[Function]}
          >
            <a
              aria-current="page"
              className="nav--link-custom px-3 nav-link active"
              data-rb-event-key={null}
              disabled={false}
              href="/"
              onClick={[Function]}
              role="tab"
              style={Object {}}
              tabIndex={-1}
            >
              Home
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/recipes"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Recipes
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/flavors"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Flavors
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/login"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Login
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/register"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Register
            </a>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;
